Use contexts and stop flickering re-render

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,9 +1,15 @@
+.hidden {
+  display: none !important;
+}
+
 html,
 body {
   background-color: white;
   padding: 0;
   margin: 0;
-  font-family: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 a {
